<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        android:orientation="vertical"
        android:padding="5dp">

        <TableRow>

            <TextView
                android:layout_gravity="center_horizontal"

                android:layout_marginBottom="25dp"
                android:layout_span="2"
                android:text="@string/settingsTitle"
                android:textSize="20dp" />

        </TableRow>

        <TableRow>

            <TextView
                android:width="300dp"
                android:paddingLeft="10dp"
                android:text="@string/backgroundSyncSettings"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/sync_box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:width="50dp"
                android:buttonTint="@color/teal"
                android:checked="true"
                android:onClick="onCheckboxClicked"


                />
        </TableRow>

        <TableRow>

            <TextView
                android:width="300dp"
                android:paddingLeft="10dp"
                android:text="@string/backgroundSyncSettingsDesc" />

        </TableRow>

    </TableLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/settings"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="25dp"
            android:background="@color/teal"
            android:text="@string/save"
            android:textColor="@color/white" />
    </RelativeLayout>

</RelativeLayout>