<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    android:padding="10dp"
    >
    <TextView
        android:id="@+id/textView"
        style="@style/myTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:text="@string/portofolioTitle"/>
    <ImageView
        android:id="@+id/setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/gear_icon"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:onClick="showSettings"/>

    <RelativeLayout
        android:id="@+id/data_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView"
        android:padding="10dp"
        android:paddingBottom="20dp"
        >


        <EditText
            android:id="@+id/search"
            android:layout_width="100sp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:background="@color/white"
            android:hint="@string/searchsymbol"
            android:padding="10dp"
            android:inputType="textCapCharacters"/>
        <EditText
            android:id="@+id/qty"
            android:layout_width="75sp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/search"
            android:background="@color/white"
            android:hint="@string/qty"
            android:inputType="number"
            android:onClick="onAdd"
            android:padding="10dp"/>

        <Button

            android:id="@+id/addButton"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@color/green"
            android:text="@string/add"
            android:textAllCaps="false"
            android:onClick="onAdd"
            android:textColor="@color/white"

            />

    </RelativeLayout>

    <ListView
        android:id="@+id/stockListDisplay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@+id/data_row"
        android:layout_above="@+id/totalValue"
        >
    </ListView>

    <TextView
        android:id="@+id/totalValue"
        style="@style/myEmpText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:text="@string/total_value"/>


</RelativeLayout>